# apertium-mwr

./: Makefile.am  README  apertium-mwr.mwr.dix  apertium-mwr.pc.in  configure.ac  modes.xml
test/: tests.json
